[package]
name = "cjp2p-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = ">=0.0.0"
bitvec = ">=0.0.0"
bincode = ">=0.0.0"
serde = { version = ">=0.0.0" , features = ["derive"] }
serde_json = { version = ">=0.0.0"  }
serde-big-array = ">=0.0.0"
sha2 =   ">=0.0.0"
base64 =   ">=0.0.0"
env_logger =   ">=0.0.0"
log =   ">=0.0.0"
rand =   ">=0.0.0"
chrono =   ">=0.0.0"
getifaddrs =   ">=0.0.0"
nix =   { version = ">=0.0.0" , features = ["net"] }
#blake3 = "=1.8.2"
snow =   "=0.9.3"
serde_with = { version = "3.0", features = ["base64"] }
time-core = "=0.1.0"
